force-app/main/default/objects/Reference_KAS__c/Reference_KAS__c.object-meta.xml
<CustomObject>
    <description>Key Account Strategy (KAS) Team needs the ability to track steps taken to migrate at risk clients from Preview to FLEX.</description>
    <label>Reference KAS</label>
    <nameField>
        <displayFormat>Reference KAS-{0000}</displayFormat>
        <label>Reference KAS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference KASs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>