force-app/main/default/objects/Reference_KAS__c/fields/Current_Discount__c.field-meta.xml
<CustomField>
    <fullName>Current_Discount__c</fullName>
    <description>This is the discount they currently have.</description>
    <label>Current Discount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>