force-app/main/default/objects/Reference_KAS__c/fields/Discount_Free_W2_s_of_years__c.field-meta.xml
<CustomField>
    <fullName>Discount_Free_W2_s_of_years__c</fullName>
    <label>Discount Free W2’s # of years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>