force-app/main/default/objects/Reference_KAS__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matching competitor pricing</fullName>
            </value>
            <value>
                <fullName>Adding services but needed to keep price low</fullName>
            </value>
            <value>
                <fullName>Only way to save</fullName>
            </value>
            <value>
                <fullName>Show of good faith</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>