force-app/main/default/objects/Reference_KAS__c/fields/Have_they_missed_any_payrolls__c.field-meta.xml
<CustomField>
    <fullName>Have_they_missed_any_payrolls__c</fullName>
    <label>Have they missed any payrolls?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>