force-app/main/default/objects/Reference_KAS__c/fields/Local_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Competitor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>