force-app/main/default/objects/Reference_KAS__c/fields/Primary_Competition__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competition__c</fullName>
    <label>Primary Competition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accudata</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Client Declined to Share</fullName>
            </value>
            <value>
                <fullName>Complete Payroll Solutions</fullName>
            </value>
            <value>
                <fullName>Cost Point</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Dayforce</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>HR Knowledge</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Intuit</fullName>
            </value>
            <value>
                <fullName>Kronos</fullName>
            </value>
            <value>
                <fullName>Local Competitor</fullName>
            </value>
            <value>
                <fullName>Netchex</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Payroll People</fullName>
            </value>
            <value>
                <fullName>QuickBooks</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
            <value>
                <fullName>The Payroll Company</fullName>
            </value>
            <value>
                <fullName>TriNet</fullName>
            </value>
            <value>
                <fullName>True Payroll Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>