force-app/main/default/objects/Reference_KAS__c/fields/Resolution_type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stabilize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>