force-app/main/default/objects/Reference_KAS__c/fields/Source_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Business__c</fullName>
    <label>Source of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ops</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>P2F Survey</fullName>
            </value>
            <value>
                <fullName>October Pushes</fullName>
            </value>
            <value>
                <fullName>January Reschedules</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>