force-app/main/default/objects/Reference_KAS__c/validationRules/Rejected_Reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Reason_required</fullName>
    <active>true</active>
    <description>Rejected Reason required when status = closed rejected.</description>
    <errorConditionFormula>AND 
( 
ISPICKVAL( Status__c , &quot;Closed - Rejected&quot;), 
ISPICKVAL( Rejected_Reason__c , &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>Rejected Reason is required</errorMessage>
</ValidationRule>