force-app/main/default/objects/Reference_KAS__c/validationRules/Required_when_Reduced_Services.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_when_Reduced_Services</fullName>
    <active>true</active>
    <description>When Resolution type &apos;Reduced services in order to retain&apos; is selected, populate New Annual Revenue, Dropped Services Revenue, Dropped Services, and Reason for Dropped Services fields.</description>
    <errorConditionFormula>ISPICKVAL( Case_Lookup__r.Reason , &apos;Reactive&apos;) &amp;&amp; 
ISPICKVAL(Resolution_Type_Details__c , &apos;Reduced services to retain&apos;) &amp;&amp; 
(ISBLANK(New_Annual_Revenue__c ) || 
ISBLANK(Dropped_Service_Revenue__c ) || 
ISBLANK(Dropped_Services__c) || 
ISPICKVAL(Reason_for_Dropped_Services__c,&apos;&apos;) )</errorConditionFormula>
    <errorMessage>New Annual Revenue, Dropped Service Revenue, and Dropped Services and Reason for Dropped Services fields are required when &apos;Reduced services in order to retain&apos; is selected in Resolution Type Details.</errorMessage>
</ValidationRule>