force-app/main/default/objects/Reference_KAS__c/validationRules/Resolution_Type_required_on_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Type_required_on_close</fullName>
    <active>true</active>
    <description>To close the record, resolution type must be populated. If they populate the resolution type, they must close the recrod.</description>
    <errorConditionFormula>(TEXT(Case_Lookup__r.Origin) = &apos;Reactive&apos;&amp;&amp; 
ISPICKVAL(Status__c , &apos;Closed&apos;) &amp;&amp; ISPICKVAL(Resolution_type__c, &apos;&apos;)) 
|| 
(TEXT(Case_Lookup__r.Origin) = &apos;Reactive&apos; &amp;&amp; NOT(ISPICKVAL(Status__c , &apos;Closed&apos;)) &amp;&amp; NOT(ISPICKVAL(Resolution_type__c, &apos;&apos;)))</errorConditionFormula>
    <errorMessage>Populate Resolution Type, then change the Status to &quot;Closed&quot;.</errorMessage>
</ValidationRule>